dmaengine: driver for the iop32x, iop33x, and iop13xx raid engines
This is a driver for the iop DMA/AAU/ADMA units which are capable of pq_xor,
pq_update, pq_zero_sum, xor, dual_xor, xor_zero_sum, fill, copy+crc, and copy
operations.

Changelog:
* fixed a slot allocation bug in do_iop13xx_adma_xor that caused too few
  slots to be requested eventually leading to data corruption
* enabled the slot allocation routine to attempt to free slots before
  returning -ENOMEM
* switched the cleanup routine to solely use the software chain and the
  status register to determine if a descriptor is complete.  This is
  necessary to support other IOP engines that do not have status writeback
  capability
* make the driver iop generic
* modified the allocation routines to understand allocating a group of
  slots for a single operation
* added a null xor initialization operation for the xor only channel on
  iop3xx
* support xor operations on buffers larger than the hardware maximum
* split the do_* routines into separate prep, src/dest set, submit stages
* added async_tx support (dependent operations initiation at cleanup time)
* simplified group handling
* added interrupt support (callbacks via tasklets)
* brought the pending depth inline with ioat (i.e. 4 descriptors)

Signed-off-by: Dan Williams <dan.j.williams@intel.com>

--- a/drivers/dma/Kconfig
+++ b/drivers/dma/Kconfig
@@ -41,4 +41,12 @@ config INTEL_IOATDMA
 	default m
 	---help---
 	  Enable support for the Intel(R) I/OAT DMA engine.
+
+config INTEL_IOP_ADMA
+        tristate "Intel IOP ADMA support"
+        depends on DMA_ENGINE && (ARCH_IOP32X || ARCH_IOP33X || ARCH_IOP13XX)
+        default m
+        ---help---
+          Enable support for the Intel(R) IOP Series RAID engines.
+
 endmenu
