--- a/drivers/i2c/busses/Kconfig
+++ b/drivers/i2c/busses/Kconfig
@@ -238,15 +238,15 @@ config I2C_IXP2000
 	  This support is also available as a module. If so, the module
 	  will be called i2c-ixp2000.
 
-config I2C_TQM8272
-	tristate "TQM8272 Bitbanged I2C Interface"
-	depends on I2C && TQM8272
+config I2C_TQM82XX
+	tristate "MPC82XX Bitbanged I2C Interface"
+	depends on I2C && (8260 || 8272)
 	select I2C_ALGOBIT
 	help
-	  Say Y here if you have a TQM8272 board.
+ 	  Say Y here if you have a MPC82XX based Board. 
 
 	  This support is also available as a module. If so, the module
-	  will be called i2c-tqm8272.
+	  will be called i2c-tqm82xx.
 
 config I2C_POWERMAC
 	tristate "Powermac I2C interface"
