--- a/arch/powerpc/Kconfig
+++ b/arch/powerpc/Kconfig
@@ -471,6 +471,12 @@ config PPC_LITE5200
 	select PPC_MPC5200
 	default n
 
+config PPC_MOTIONPRO
+	bool "Promess Motion-PRO Board"
+	depends on PPC_MULTIPLATFORM && PPC32
+	select PPC_MPC5200
+	default n
+
 config PPC_PMAC
 	bool "Apple PowerMac based machines"
 	depends on PPC_MULTIPLATFORM
