[PATCH] ibm_emac: Add support for interrupt coalescing (440EPx/440GRx)
This patch adds support for EMAC interrupt coalescing for the AMCC 440EPx
and 440GRx PPC's to the ibm_emac ethernet driver used by all 4xx PPC's.
For certain applications, ethernet interrupt coalescing may increase the
overall throughput.

The parameters (rx-/tx-frames and timeout) can be configured using the
Linux build system and changed in the running system using ethtool.

For example by using the following command:

$ ethtool -C eth0 rx-frames 8 rx-usecs 5000 tx-frames 8 tx-usecs 5000

One restriction right now is, that when enabled in the Linux kernel, all
EMAC interfaces will run in the interrupt coalescing mode. This should not
be a problem since each interface can be configured individually. So eth1
could be configured with 1 rx-/tx-frames and without timeout (same as non
interrupt coalescing mode), and eth0 could be configured as described in
the example above.

Signed-off-by: Stefan Roese <sr@denx.de>

--- a/drivers/net/Kconfig
+++ b/drivers/net/Kconfig
@@ -1268,6 +1268,33 @@ config IBM_EMAC_NR_START
 
 	  If unsure, set to 0.
 
+config IBM_EMAC_INTR_COALESCE
+	bool "Interrupt coalescing"
+	depends on IBM_EMAC && (440EPX || 440GRX)
+  	default y
+	help
+	  When selected the Ethernet interrupt coalescing is selected.
+
+config IBM_EMAC_TX_COALESCE_COUNT
+	int "TX Coalescence counter (packets)"
+	depends on IBM_EMAC_INTR_COALESCE
+	default "8"
+
+config IBM_EMAC_TX_COALESCE_TIMER
+	int "TX Coalescence timer (usecs)"
+	depends on IBM_EMAC_INTR_COALESCE
+	default "1000"
+
+config IBM_EMAC_RX_COALESCE_COUNT
+	int "RX Coalescence counter (packets)"
+	depends on IBM_EMAC_INTR_COALESCE
+	default "8"
+
+config IBM_EMAC_RX_COALESCE_TIMER
+	int "RX Coalescence timer (usecs)"
+	depends on IBM_EMAC_INTR_COALESCE
+	default "1000"
+
 config NET_PCI
 	bool "EISA, VLB, PCI and on board controllers"
 	depends on NET_ETHERNET && (ISA || EISA || PCI)
