PPC32: ADMA support for PPC 440SPe processors.
This is a driver for the XOR and DMA1,2 engines on the PPC 440SPe
processors. It includes support for using the engines asynchronously
to perform such operations as copy, xor calculations, xor_zero_check
operations and some other. The driver is adapted for use inside the
ADMA sub-system.

This patch is based on and requires a set of patches posted to the
linux-raid mailing list by Dan Williams on 2007-01-23:

[PATCH 2.6.20-rc5 01/12] dmaengine: add base support for the async_tx api
	http://marc.theaimsgroup.com/?l=linux-kernel&m=116957843221563&q=raw
[PATCH 02/12] dmaengine: add the async_tx api
	http://marc.theaimsgroup.com/?l=linux-raid&m=116952392528235&q=raw
[PATCH 03/12] md: add raid5_run_ops and support routines
	http://marc.theaimsgroup.com/?l=linux-kernel&m=116952392407474&q=raw
[PATCH 04/12] md: use raid5_run_ops for stripe cache operations
	http://marc.theaimsgroup.com/?l=linux-kernel&m=116952392416825&q=raw
[PATCH 05/12] md: move write operations to raid5_run_ops
	http://marc.theaimsgroup.com/?l=linux-raid&m=116952392615357&q=raw
[PATCH 06/12] md: move raid5 compute block operations to raid5_run_ops
	http://marc.theaimsgroup.com/?l=linux-raid&m=116952392509989&q=raw
[PATCH 07/12] md: move raid5 parity checks to raid5_run_ops
	http://marc.theaimsgroup.com/?l=linux-raid&m=116952306910263&q=raw
[PATCH 08/12] md: satisfy raid5 read requests via raid5_run_ops
	http://marc.theaimsgroup.com/?l=linux-kernel&m=116952392304938&q=raw
[PATCH 09/12] md: use async_tx and raid5_run_ops for raid5 expansion operations
	http://marc.theaimsgroup.com/?l=linux-raid&m=116952392405885&q=raw
[PATCH 10/12] md: move raid5 io requests to raid5_run_ops
	http://marc.theaimsgroup.com/?l=linux-raid&m=116952392409725&q=raw
[PATCH 11/12] md: remove raid5 compute_block and compute_parity5
	http://marc.theaimsgroup.com/?l=linux-kernel&m=116952392323697&q=raw
[PATCH 12/12] dmaengine: driver for the iop32x, iop33x, and iop13xx raid engines
	http

--- a/drivers/dma/Kconfig
+++ b/drivers/dma/Kconfig
@@ -49,4 +49,11 @@ config INTEL_IOP_ADMA
         ---help---
           Enable support for the Intel(R) IOP Series RAID engines.
 
+config AMCC_SPE_ADMA
+	tristate "AMCC SPE ADMA support"
+	depends on DMA_ENGINE && 440SPE
+	default y
+	---help---
+	  Enable support for the AMCC 440SPe RAID engines.
+
 endmenu
