ppc: Support for the PAGE_SIZE = 16 KB on the PPC32 44x platforms.
This patch that adds 16KB PAGE_SIZE capability for the ppc44x
processors.

 We have slightly modified our RAID setup on Yucca (the controller and disk
drives had been changed), so to achieve some consistency with the previously
reported results I have repeated the performance tests for 4K and 64K pages
too.  And the figures obtained are as follow:

With a RAID setup with (3d + 1p) on a Yucca board we measure:

(1) PAGE_SIZE =  4KB: P =  42.992 MBps;
(2) PAGE_SIZE = 16KB: P = 101.374 MBps;
(3) PAGE_SIZE = 64KB: P = 109.608 MBps.

Signed-off-by: Yuri Tikhonov <yur@emcraft.com>
Acked-by: Wolfgang Denk <wd@denx.de>

--- a/arch/ppc/Kconfig
+++ b/arch/ppc/Kconfig
@@ -1202,7 +1202,7 @@ config SECCOMP
 	  If unsure, say Y. Only embedded should say N here.
 
 config PPC_PAGE_SHIFT
-	int "Page size (12=>4KB; 16=>64KB)" if 44x
+	int "Page size (12=>4KB; 14=>16KB; 16=>64KB)" if 44x
 	default "12"
 	range 12 16
 	help
