[PATCH] ppc: Update Katmai to not use CONFIG_RESOURCES_64BIT anymore
Enabling CONFIG_RESOURCES_64BIT caused problems with generic pci
drivers (ioremap()), so now this option is disabled by default again
and the MTD support is added without this option.

Signed-off-by: Stefan Roese <sr@denx.de>

--- a/arch/ppc/configs/katmai_defconfig
+++ b/arch/ppc/configs/katmai_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Linux kernel version: 2.6.21-rc2
-# Sat Mar 10 07:50:08 2007
+# Linux kernel version: 2.6.21-rc4
+# Thu Mar 22 14:09:27 2007
 #
 CONFIG_MMU=y
 CONFIG_GENERIC_HARDIRQS=y
@@ -43,6 +43,7 @@ CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_IKCONFIG is not set
 CONFIG_SYSFS_DEPRECATED=y
 # CONFIG_RELAY is not set
+CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
@@ -163,13 +164,14 @@ CONFIG_FLATMEM=y
 CONFIG_FLAT_NODE_MEM_MAP=y
 # CONFIG_SPARSEMEM_STATIC is not set
 CONFIG_SPLIT_PTLOCK_CPUS=4
-CONFIG_RESOURCES_64BIT=y
+# CONFIG_RESOURCES_64BIT is not set
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BINFMT_ELF=y
 # CONFIG_BINFMT_MISC is not set
 CONFIG_CMDLINE_BOOL=y
 CONFIG_CMDLINE="ip=on console=ttyS0,115200"
 CONFIG_SECCOMP=y
+CONFIG_PPC_PAGE_SHIFT=12
 CONFIG_ISA_DMA_API=y
 
 #
@@ -393,7 +395,7 @@ CONFIG_MTD_CFI_UTIL=y
 CONFIG_MTD_COMPLEX_MAPPINGS=y
 CONFIG_MTD_PHYSMAP=y
 CONFIG_MTD_PHYSMAP_START=0x8000000
-CONFIG_MTD_PHYSMAP_LEN=0
+CONFIG_MTD_PHYSMAP_LEN=0x0
 CONFIG_MTD_PHYSMAP_BANKWIDTH=2
 # CONFIG_MTD_PCI is not set
 # CONFIG_MTD_PLATRAM is not set
@@ -450,7 +452,6 @@ CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_COUNT=16
 CONFIG_BLK_DEV_RAM_SIZE=4096
 CONFIG_BLK_DEV_RAM_BLOCKSIZE=1024
-CONFIG_BLK_DEV_INITRD=y
 # CONFIG_CDROM_PKTCDVD is not set
 # CONFIG_ATA_OVER_ETH is not set
 
@@ -1003,6 +1004,7 @@ CONFIG_RTC_DRV_DS1307=y
 #
 # DMA Clients
 #
+# CONFIG_ASYNC_TX_DMA is not set
 
 #
 # DMA Devices
@@ -1066,7 +1068,8 @@ CONFIG_PROC_FS=y
 CONFIG_PROC_KCORE=y
 CONFIG_PROC_SYSCTL=y
 CONFIG_SYSFS=y
-# CONFIG_TMPFS is not set
+CONFIG_TMPFS=y
+# CONFIG_TMPFS_POSIX_ACL is not set
 # CONFIG_HUGETLB_PAGE is not set
 CONFIG_RAMFS=y
 # CONFIG_CONFIGFS_FS is not set
