--- a/drivers/usb/Kconfig
+++ b/drivers/usb/Kconfig
@@ -29,6 +29,7 @@ config USB_ARCH_HAS_OHCI
 	# PPC:
 	default y if STB03xxx
 	default y if PPC_MPC52xx
+	default y if 405EZ
 	default y if 440EP
 	default y if 440EPX
 	# MIPS:
