--- a/drivers/usb/host/Kconfig
+++ b/drivers/usb/host/Kconfig
@@ -111,13 +111,13 @@ config USB_OHCI_HCD
 
 config USB_OHCI_HCD_PPC_SOC
 	bool "OHCI support for on-chip PPC USB controller"
-	depends on USB_OHCI_HCD && (STB03xxx || PPC_MPC52xx || 440EP || 440EPX)
+	depends on USB_OHCI_HCD && (STB03xxx || PPC_MPC52xx || 405EZ || 440EP || 440EPX)
 	default y
 	select USB_OHCI_BIG_ENDIAN_DESC
 	select USB_OHCI_BIG_ENDIAN_MMIO
 	---help---
 	  Enables support for the USB controller on the MPC52xx,
-	  STB03xxx, 440EP or 440EPx processor chip.  If unsure, say Y.
+	  STB03xxx, 405EZ, 440EP or 440EPx processor chip.  If unsure, say Y.
 
 config USB_OHCI_HCD_PPC_OF
 	bool "OHCI support for PPC USB controller on OF platform bus"
