Clean up support for bigger page sizes than 4KB on PPC44x
Replace the CONFIG_PPC_PAGE_SHIFT integer option with choice of three
boolean options CONFIG_PPC_PAGE_4K / CONFIG_PPC_PAGE_16K /
CONFIG_PPC_PAGE_64K as suggested by Paul Mackerras (2007-03-21).

Signed-off-by: Yuri Tikhonov <yur@emcraft.com>
--

--- a/arch/ppc/Kconfig
+++ b/arch/ppc/Kconfig
@@ -1201,15 +1201,24 @@ config SECCOMP
 
 	  If unsure, say Y. Only embedded should say N here.
 
-config PPC_PAGE_SHIFT
-	int "Page size (12=>4KB; 14=>16KB; 16=>64KB)" if 44x
-	default "12"
-	range 12 16
-	help
+choice
+	prompt "Page size"
+	default PPC_PAGE_4K
+	---help---
 	  The PAGE_SIZE definition. Increasing the page size may
 	  improve the system performance in some dedicated cases.
 
-	  If unsure, set it to 12 (4KB).
+	  If unsure, set it to 4 KB.
+
+config PPC_PAGE_4K
+	bool "4 KB"
+
+config PPC_PAGE_16K
+	bool "16 KB" if 44x
+
+config PPC_PAGE_64K
+	bool "64 KB" if 44x
+endchoice
 
 endmenu
 
