--- a/drivers/usb/host/Kconfig
+++ b/drivers/usb/host/Kconfig
@@ -70,14 +70,12 @@ config USB_EHCI_TT_NEWSCHED
 config USB_EHCI_BIG_ENDIAN_MMIO
 	bool
 	depends on USB_EHCI_HCD
-#	default n
-	default y
+	default n
 
-config USB_EHCI_BIG_ENDIAN_DATA
+config USB_EHCI_BIG_ENDIAN_DESC
 	bool
 	depends on USB_EHCI_HCD
-#	default n
-	default y
+	default n
 
 config USB_ISP116X_HCD
 	tristate "ISP116X HCD support"
