Update for md raid5 acceleration and async_tx
This patch is an adaption/merge of the following serial of
Dan Williams' patches:

List:       linux-raid
Subject:    [PATCH 2.6.21-rc4 00/15] md raid5 acceleration and async_tx
From:       Dan Williams <dan.j.williams () intel ! com>
Date:       2007-03-23 6:51:37
Message-ID: 20070323064856.15570.45052.stgit () dwillia2-linux ! ch ! intel ! com
[Download message RAW]

The following patch set implements the async_tx api and modifies
md-raid5 to issue memory copies and xor calculations asynchronously.
Async_tx is an extension of the existing dmaengine interface in the
kernel.  Async_tx allows kernel code to utilize application specific
acceleration engines when present and fall back to software routines
otherwise.  Further details can be found in the individual patch
headers.

The implementation has been in -mm since 2.6.20-mm1 and has been
released in various forms to IOP users since 2.6.18
(http://sourceforge.net/projects/xscaleiop).  This release includes
cleanups to the iop-adma driver.  The md-raid5 patches are just rebased
versions of the 2.6.20-rc5 release.

Given the release of an acceleration engine driver for another platform
(440spe http://marc.info/?l=linux-raid&m=117400143317440&w=2), I feel
more comfortable broaching the subject of 2.6.22 inclusion.

Regards,
Dan

Signed-off-by: Yuri Tikhonov <yur@emcraft.com>

--

--- a/drivers/md/Kconfig
+++ b/drivers/md/Kconfig
@@ -8,6 +8,7 @@ menu "Multi-device support (RAID and LVM)"
 
 config MD
 	bool "Multiple devices driver support (RAID and LVM)"
+	select ASYNC_TX_DMA
 	help
 	  Support multiple physical spindles through a single logical device.
 	  Required for RAID and logical volume management.
