[PATCH] ibm_emac: Add EMAC interrupt coalescing support for 405EZ
This patch adds EMAC interrupt coalescing support for the AMCC
405EZ and the AMCC 405EZ evaluation board Acadia.

Signed-off-by: Stefan Roese <sr@denx.de>

--- a/arch/ppc/configs/acadia_defconfig
+++ b/arch/ppc/configs/acadia_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Linux kernel version: 2.6.21-rc3
-# Tue Apr 10 17:25:10 2007
+# Linux kernel version: 2.6.21-rc6
+# Mon Apr 16 15:46:05 2007
 #
 CONFIG_MMU=y
 CONFIG_GENERIC_HARDIRQS=y
@@ -171,7 +171,9 @@ CONFIG_CMDLINE_BOOL=y
 CONFIG_CMDLINE="ip=on"
 # CONFIG_PM is not set
 CONFIG_SECCOMP=y
-CONFIG_PPC_PAGE_SHIFT=12
+CONFIG_PPC_PAGE_4K=y
+# CONFIG_PPC_PAGE_16K is not set
+# CONFIG_PPC_PAGE_64K is not set
 CONFIG_ISA_DMA_API=y
 
 #
@@ -530,6 +532,11 @@ CONFIG_IBM_EMAC_RX_COPY_THRESHOLD=256
 CONFIG_IBM_EMAC_RX_SKB_HEADROOM=0
 # CONFIG_IBM_EMAC_DEBUG is not set
 CONFIG_IBM_EMAC_NR_START=0
+CONFIG_IBM_EMAC_INTR_COALESCE=y
+CONFIG_IBM_EMAC_TX_COALESCE_COUNT=8
+CONFIG_IBM_EMAC_TX_COALESCE_TIMER=1000
+CONFIG_IBM_EMAC_RX_COALESCE_COUNT=8
+CONFIG_IBM_EMAC_RX_COALESCE_TIMER=1000
 
 #
 # Ethernet (1000 Mbit)
