--- a/arch/ppc/platforms/85xx/Kconfig
+++ b/arch/ppc/platforms/85xx/Kconfig
@@ -70,6 +70,20 @@ config TQM8560
 
 endchoice
 
+choice
+	prompt "STx GP3 Processor Option"
+	depends on STX_GP3
+	default STX_8560
+
+config STX_8560
+	bool "MPC8560"
+
+config STX_8555
+	bool "MPC8555/8541"
+
+endchoice
+
+
 # It's often necessary to know the specific 85xx processor type.
 # Fortunately, it is implied (so far) from the board type, so we
 # don't need to ask more redundant questions.
@@ -85,12 +99,12 @@ config MPC8548
 
 config MPC8555
 	bool
-	depends on MPC8555_CDS || TQM8541 || TQM8555
+	depends on MPC8555_CDS || STX_8555 || TQM8541 || TQM8555
 	default y
 
 config MPC8560
 	bool
-	depends on SBC8560 || MPC8560_ADS || STX_GP3 || TQM8560
+	depends on SBC8560 || MPC8560_ADS || STX_8560 || TQM8560
 	default y
 
 config 85xx_PCI2
