--- a/arch/ppc/configs/stx_gp3ssa_defconfig
+++ b/arch/ppc/configs/stx_gp3ssa_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.17.14
-# Sun Nov 19 18:26:16 2006
+# Tue Dec  5 09:12:03 2006
 #
 CONFIG_MMU=y
 CONFIG_GENERIC_HARDIRQS=y
@@ -111,7 +111,8 @@ CONFIG_PPC_INDIRECT_PCI_BE=y
 # CONFIG_MPC8555_CDS is not set
 # CONFIG_MPC8560_ADS is not set
 # CONFIG_SBC8560 is not set
-CONFIG_STX_GP3=y
+# CONFIG_STX_GP3 is not set
+CONFIG_STX_GP3SSA=y
 # CONFIG_TQM8540 is not set
 # CONFIG_TQM8541 is not set
 # CONFIG_TQM8555 is not set
@@ -119,6 +120,7 @@ CONFIG_STX_GP3=y
 # CONFIG_STX_8560 is not set
 CONFIG_STX_8555=y
 CONFIG_MPC8555=y
+CONFIG_85xx_PCI2=y
 
 #
 # Platform options
@@ -365,10 +367,41 @@ CONFIG_BLK_DEV_IDECD=m
 # IDE chipset support/bugfixes
 #
 CONFIG_IDE_GENERIC=y
-# CONFIG_BLK_DEV_IDEPCI is not set
+CONFIG_BLK_DEV_IDEPCI=y
+# CONFIG_IDEPCI_SHARE_IRQ is not set
+# CONFIG_BLK_DEV_OFFBOARD is not set
+# CONFIG_BLK_DEV_GENERIC is not set
+# CONFIG_BLK_DEV_OPTI621 is not set
+# CONFIG_BLK_DEV_SL82C105 is not set
+CONFIG_BLK_DEV_IDEDMA_PCI=y
+# CONFIG_BLK_DEV_IDEDMA_FORCED is not set
+CONFIG_IDEDMA_PCI_AUTO=y
+# CONFIG_IDEDMA_ONLYDISK is not set
+# CONFIG_BLK_DEV_AEC62XX is not set
+# CONFIG_BLK_DEV_ALI15X3 is not set
+# CONFIG_BLK_DEV_AMD74XX is not set
+# CONFIG_BLK_DEV_CMD64X is not set
+# CONFIG_BLK_DEV_TRIFLEX is not set
+# CONFIG_BLK_DEV_CY82C693 is not set
+# CONFIG_BLK_DEV_CS5520 is not set
+# CONFIG_BLK_DEV_CS5530 is not set
+# CONFIG_BLK_DEV_HPT34X is not set
+# CONFIG_BLK_DEV_HPT366 is not set
+# CONFIG_BLK_DEV_SC1200 is not set
+# CONFIG_BLK_DEV_PIIX is not set
+CONFIG_BLK_DEV_IT821X=y
+# CONFIG_BLK_DEV_NS87415 is not set
+# CONFIG_BLK_DEV_PDC202XX_OLD is not set
+# CONFIG_BLK_DEV_PDC202XX_NEW is not set
+# CONFIG_BLK_DEV_SVWKS is not set
+# CONFIG_BLK_DEV_SIIMAGE is not set
+# CONFIG_BLK_DEV_SLC90E66 is not set
+# CONFIG_BLK_DEV_TRM290 is not set
+# CONFIG_BLK_DEV_VIA82CXXX is not set
 # CONFIG_IDE_ARM is not set
-# CONFIG_BLK_DEV_IDEDMA is not set
-# CONFIG_IDEDMA_AUTO is not set
+CONFIG_BLK_DEV_IDEDMA=y
+# CONFIG_IDEDMA_IVB is not set
+CONFIG_IDEDMA_AUTO=y
 # CONFIG_BLK_DEV_HD is not set
 
 #
