--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -943,7 +943,7 @@ if IPIPE
 config IPIPE_ARM_KUSER_TSC
        bool
        select GENERIC_TIME
-       default y if ARCH_AT91 || ARCH_IXP4XX || ARCH_MXC || ARCH_OMAP || PLAT_PXA || PLAT_S3C24XX || ARCH_SA1100
+       default y if ARCH_AT91 || ARM_TIMER_SP804 || ARCH_IXP4XX || ARCH_MXC || ARCH_OMAP || PLAT_PXA || PLAT_S3C24XX || ARCH_SA1100
 endif
 
 source arch/arm/mm/Kconfig
